# Pitch2Midi

./: CMakeLists.txt  main.cpp
